--- a/live-code-layout/index.html
+++ b/live-code-layout/index.html
@@ -9,6 +9,9 @@
     integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
     crossorigin="anonymous"
   />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
     <title>BEM</title>
 </head>
@@ -17,7 +20,7 @@
         <h2 class="navigation__title">JACKETS</h2>
         <div class="navigation__container">
             <div class="navigation__filter">
-            <div class="navigation__sort"></div>
+            <div clas="navigation__sort"></div>
             <label class="navigation__filter-lable">FILTER BY</label>
             <select class="navigation__select">
                 <option>All</option>
